--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="app_name">НМедиа</string>
     <string name="app_text">НМедиа!</string>
+    <string name="avatar_description">Аватар автора</string>
 </resources>
